# structured-matrix

./: Foo.hs  LICENSE  MWE.hs  structured-matrix.cabal
Numeric/: StructuredMatrix.hs
Numeric/StructuredMatrix/: Matrix.hs  PrettyPrint.hs  SMatrix.hs
